--- a/archives/toutiao-search/2024-03-14.md
+++ b/archives/toutiao-search/2024-03-14.md
@@ -1,58 +1,76 @@
 # 2024-03-14
 
-共 298 条
+共 312 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 14 2024 22:00:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Mar 14 2024 23:00:55 GMT+0800 (China Standard Time) -->
 1. [燕郊爆炸系输送中的管道泄漏导致](https://so.toutiao.com/search?keyword=燕郊爆炸系输送中的管道泄漏导致)
-1. [SpaceX星舰第三次试飞成功进入太空](https://so.toutiao.com/search?keyword=SpaceX星舰第三次试飞成功进入太空)
+1. [邯郸遇害男孩亲属称校长说死是意外](https://so.toutiao.com/search?keyword=邯郸遇害男孩亲属称校长说死是意外)
 1. [一组海报带您沉浸式感受春耕](https://so.toutiao.com/search?keyword=一组海报带您沉浸式感受春耕)
-1. [美众议院通过TikTok法案 外交部回应](https://so.toutiao.com/search?keyword=美众议院通过TikTok法案+外交部回应)
-1. [马斯克祝贺SpaceX星舰已达环绕速度](https://so.toutiao.com/search?keyword=马斯克祝贺SpaceX星舰已达环绕速度)
-1. [SpaceX星舰一二级火箭成功分离](https://so.toutiao.com/search?keyword=SpaceX星舰一二级火箭成功分离)
 1. [学生食堂内做不雅动作？校方通报](https://so.toutiao.com/search?keyword=学生食堂内做不雅动作？校方通报)
 1. [美网红集体发声反对国会打压TikTok](https://so.toutiao.com/search?keyword=美网红集体发声反对国会打压TikTok)
+1. [中国买家取消美国小麦订单有何影响](https://so.toutiao.com/search?keyword=中国买家取消美国小麦订单有何影响)
+1. [雷军晒小米SU7实拍照](https://so.toutiao.com/search?keyword=雷军晒小米SU7实拍照)
+1. [北京卫健委：新冠病毒正处于流行期](https://so.toutiao.com/search?keyword=北京卫健委：新冠病毒正处于流行期)
 1. [青海因洪水致数十人死亡系谣言](https://so.toutiao.com/search?keyword=青海因洪水致数十人死亡系谣言)
+1. [一天之内26架次解放军军机绕台巡航](https://so.toutiao.com/search?keyword=一天之内26架次解放军军机绕台巡航)
+1. [SpaceX星舰任务提前结束](https://so.toutiao.com/search?keyword=SpaceX星舰任务提前结束)
+1. [SpaceX星舰一二级火箭成功分离](https://so.toutiao.com/search?keyword=SpaceX星舰一二级火箭成功分离)
+1. [男子开车带妻子体检遇燕郊爆炸身亡](https://so.toutiao.com/search?keyword=男子开车带妻子体检遇燕郊爆炸身亡)
+1. [俄集束弹药覆盖乌军停机坪画面曝光](https://so.toutiao.com/search?keyword=俄集束弹药覆盖乌军停机坪画面曝光)
+1. [星舰在重返大气层期间失联](https://so.toutiao.com/search?keyword=星舰在重返大气层期间失联)
+1. [货车“见缝插针”引事故](https://so.toutiao.com/search?keyword=货车“见缝插针”引事故)
+1. [镇政府回应游客在水牢里泡温泉](https://so.toutiao.com/search?keyword=镇政府回应游客在水牢里泡温泉)
+1. [马斯克祝贺SpaceX星舰已达环绕速度](https://so.toutiao.com/search?keyword=马斯克祝贺SpaceX星舰已达环绕速度)
+1. [深圳原副市长黄敏被查](https://so.toutiao.com/search?keyword=深圳原副市长黄敏被查)
+1. [夫妻安装防护栏从19楼坠亡](https://so.toutiao.com/search?keyword=夫妻安装防护栏从19楼坠亡)
+1. [美众议院通过TikTok法案 外交部回应](https://so.toutiao.com/search?keyword=美众议院通过TikTok法案+外交部回应)
+1. [央媒：燕郊前年爆炸事故仍未认定责任](https://so.toutiao.com/search?keyword=央媒：燕郊前年爆炸事故仍未认定责任)
+1. [女生独自夜跑遭陌生大爷搭讪](https://so.toutiao.com/search?keyword=女生独自夜跑遭陌生大爷搭讪)
+1. [专家解读普京涉核武表态](https://so.toutiao.com/search?keyword=专家解读普京涉核武表态)
+1. [星舰能把人送上月球和火星吗](https://so.toutiao.com/search?keyword=星舰能把人送上月球和火星吗)
+1. [男子扫码充电竟被投百万医疗险](https://so.toutiao.com/search?keyword=男子扫码充电竟被投百万医疗险)
+1. [电动车“4不得”新政策有何影响](https://so.toutiao.com/search?keyword=电动车“4不得”新政策有何影响)
+1. [普京在俄大选中面临三位挑战者](https://so.toutiao.com/search?keyword=普京在俄大选中面临三位挑战者)
+1. [学校为学生安全考虑放学封路半小时](https://so.toutiao.com/search?keyword=学校为学生安全考虑放学封路半小时)
+1. [女生以为是金毛 结果越大越不对劲](https://so.toutiao.com/search?keyword=女生以为是金毛+结果越大越不对劲)
+1. [TikTok会在美国被禁吗](https://so.toutiao.com/search?keyword=TikTok会在美国被禁吗)
+1. [日本一猫咪化工池沾满致癌物后逃离](https://so.toutiao.com/search?keyword=日本一猫咪化工池沾满致癌物后逃离)
+1. [媒体人谈采访受阻：封锁是最大负面](https://so.toutiao.com/search?keyword=媒体人谈采访受阻：封锁是最大负面)
+1. [90后落马女干部刘芳秀出镜忏悔](https://so.toutiao.com/search?keyword=90后落马女干部刘芳秀出镜忏悔)
+1. [普京：俄已对核战争做好准备](https://so.toutiao.com/search?keyword=普京：俄已对核战争做好准备)
+1. [独生女举报62岁父亲代孕生儿子](https://so.toutiao.com/search?keyword=独生女举报62岁父亲代孕生儿子)
+1. [黑色外卖勺不能用？博主买1100把检测](https://so.toutiao.com/search?keyword=黑色外卖勺不能用？博主买1100把检测)
+1. [何超琼和大家一起唱《奢香夫人》](https://so.toutiao.com/search?keyword=何超琼和大家一起唱《奢香夫人》)
+1. [俄方称毫不怀疑白俄将正式加入上合](https://so.toutiao.com/search?keyword=俄方称毫不怀疑白俄将正式加入上合)
+1. [普京若胜选新任期将面临哪些挑战](https://so.toutiao.com/search?keyword=普京若胜选新任期将面临哪些挑战)
+1. [宠物医院高压氧舱爆炸受伤女子去世](https://so.toutiao.com/search?keyword=宠物医院高压氧舱爆炸受伤女子去世)
+1. [“通胀潮”来了？3样东西或上涨](https://so.toutiao.com/search?keyword=“通胀潮”来了？3样东西或上涨)
+1. [全新普拉多能否登顶国内越野市场](https://so.toutiao.com/search?keyword=全新普拉多能否登顶国内越野市场)
+1. [媒体调查加油站偷油又偷税](https://so.toutiao.com/search?keyword=媒体调查加油站偷油又偷税)
+1. [男子在同学婚礼上刮刮乐中奖10万](https://so.toutiao.com/search?keyword=男子在同学婚礼上刮刮乐中奖10万)
+1. [济南6天开了4家甘肃麻辣烫](https://so.toutiao.com/search?keyword=济南6天开了4家甘肃麻辣烫)
+1. [美发的坑根本踩不完](https://so.toutiao.com/search?keyword=美发的坑根本踩不完)
+1. [孩子静悄悄必定在“作妖”](https://so.toutiao.com/search?keyword=孩子静悄悄必定在“作妖”)
+1. [有人跨越2700公里去吃天水麻辣烫](https://so.toutiao.com/search?keyword=有人跨越2700公里去吃天水麻辣烫)
+1. [博主把去世狗狗的弟弟接回家](https://so.toutiao.com/search?keyword=博主把去世狗狗的弟弟接回家)
+1. [SpaceX星舰第三次试飞成功进入太空](https://so.toutiao.com/search?keyword=SpaceX星舰第三次试飞成功进入太空)
 1. [河北省委：支持保障记者正当采访](https://so.toutiao.com/search?keyword=河北省委：支持保障记者正当采访)
 1. [直击SpaceX星舰第三次试飞](https://so.toutiao.com/search?keyword=直击SpaceX星舰第三次试飞)
-1. [男子开车带妻子体检遇燕郊爆炸身亡](https://so.toutiao.com/search?keyword=男子开车带妻子体检遇燕郊爆炸身亡)
-1. [中国买家取消美国小麦订单有何影响](https://so.toutiao.com/search?keyword=中国买家取消美国小麦订单有何影响)
 1. [WTT新加坡大满贯林诗栋1-3不敌波尔](https://so.toutiao.com/search?keyword=WTT新加坡大满贯林诗栋1-3不敌波尔)
-1. [北京卫健委：新冠病毒正处于流行期](https://so.toutiao.com/search?keyword=北京卫健委：新冠病毒正处于流行期)
-1. [女生独自夜跑遭陌生大爷搭讪](https://so.toutiao.com/search?keyword=女生独自夜跑遭陌生大爷搭讪)
-1. [镇政府回应游客在水牢里泡温泉](https://so.toutiao.com/search?keyword=镇政府回应游客在水牢里泡温泉)
-1. [普京：俄已对核战争做好准备](https://so.toutiao.com/search?keyword=普京：俄已对核战争做好准备)
-1. [90后落马女干部刘芳秀出镜忏悔](https://so.toutiao.com/search?keyword=90后落马女干部刘芳秀出镜忏悔)
 1. [中国家电及消费电子博览会开幕](https://so.toutiao.com/search?keyword=中国家电及消费电子博览会开幕)
-1. [央媒：燕郊前年爆炸事故仍未认定责任](https://so.toutiao.com/search?keyword=央媒：燕郊前年爆炸事故仍未认定责任)
 1. [男子评估二手车发现后备箱底板有洞](https://so.toutiao.com/search?keyword=男子评估二手车发现后备箱底板有洞)
-1. [学校为学生安全考虑放学封路半小时](https://so.toutiao.com/search?keyword=学校为学生安全考虑放学封路半小时)
 1. [20多万现金埋地里受损银行救回12万](https://so.toutiao.com/search?keyword=20多万现金埋地里受损银行救回12万)
-1. [货车“见缝插针”引事故](https://so.toutiao.com/search?keyword=货车“见缝插针”引事故)
-1. [日本一猫咪化工池沾满致癌物后逃离](https://so.toutiao.com/search?keyword=日本一猫咪化工池沾满致癌物后逃离)
-1. [深圳原副市长黄敏被查](https://so.toutiao.com/search?keyword=深圳原副市长黄敏被查)
-1. [俄方称毫不怀疑白俄将正式加入上合](https://so.toutiao.com/search?keyword=俄方称毫不怀疑白俄将正式加入上合)
 1. [燕郊爆燃事故造成7死27伤](https://so.toutiao.com/search?keyword=燕郊爆燃事故造成7死27伤)
-1. [电动车“4不得”新政策有何影响](https://so.toutiao.com/search?keyword=电动车“4不得”新政策有何影响)
-1. [TikTok会在美国被禁吗](https://so.toutiao.com/search?keyword=TikTok会在美国被禁吗)
-1. [一天之内26架次解放军军机绕台巡航](https://so.toutiao.com/search?keyword=一天之内26架次解放军军机绕台巡航)
-1. [独生女举报62岁父亲代孕生儿子](https://so.toutiao.com/search?keyword=独生女举报62岁父亲代孕生儿子)
 1. [燕郊爆燃逃生者称又捡一条命](https://so.toutiao.com/search?keyword=燕郊爆燃逃生者称又捡一条命)
-1. [有人跨越2700公里去吃天水麻辣烫](https://so.toutiao.com/search?keyword=有人跨越2700公里去吃天水麻辣烫)
 1. [何超琼担任贵州毕节文旅形象大使](https://so.toutiao.com/search?keyword=何超琼担任贵州毕节文旅形象大使)
 1. [男子头晕恶心1个月查出尿毒症](https://so.toutiao.com/search?keyword=男子头晕恶心1个月查出尿毒症)
-1. [俄集束弹药覆盖乌军停机坪画面曝光](https://so.toutiao.com/search?keyword=俄集束弹药覆盖乌军停机坪画面曝光)
 1. [李雪琴瘦了](https://so.toutiao.com/search?keyword=李雪琴瘦了)
 1. [商务部回应美众议院通过TikTok法案](https://so.toutiao.com/search?keyword=商务部回应美众议院通过TikTok法案)
-1. [普京在俄大选中面临三位挑战者](https://so.toutiao.com/search?keyword=普京在俄大选中面临三位挑战者)
 1. [菲总统称不能接受中方“十段线”](https://so.toutiao.com/search?keyword=菲总统称不能接受中方“十段线”)
-1. [雷军晒小米SU7实拍照](https://so.toutiao.com/search?keyword=雷军晒小米SU7实拍照)
-1. [媒体人谈采访受阻：封锁是最大负面](https://so.toutiao.com/search?keyword=媒体人谈采访受阻：封锁是最大负面)
 1. [陈晓东任外交部副部长](https://so.toutiao.com/search?keyword=陈晓东任外交部副部长)
-1. [何超琼和大家一起唱《奢香夫人》](https://so.toutiao.com/search?keyword=何超琼和大家一起唱《奢香夫人》)
 1. [田朴珺送73岁王石定制款国产车](https://so.toutiao.com/search?keyword=田朴珺送73岁王石定制款国产车)
 1. [武大游客校内鸣笛与学生起冲突](https://so.toutiao.com/search?keyword=武大游客校内鸣笛与学生起冲突)
-1. [美发的坑根本踩不完](https://so.toutiao.com/search?keyword=美发的坑根本踩不完)
 1. [2岁孙女被鸡飞踹 爷爷炖鸡解气](https://so.toutiao.com/search?keyword=2岁孙女被鸡飞踹+爷爷炖鸡解气)
 1. [SpaceX星舰今晚第三次试飞](https://so.toutiao.com/search?keyword=SpaceX星舰今晚第三次试飞)
 1. [甘肃天水旅游热度上涨186%](https://so.toutiao.com/search?keyword=甘肃天水旅游热度上涨186%)
@@ -66,7 +84,6 @@
 1. [回南天又在广东返场](https://so.toutiao.com/search?keyword=回南天又在广东返场)
 1. [TikTok：不会改变数据保护策略](https://so.toutiao.com/search?keyword=TikTok：不会改变数据保护策略)
 1. [大陆渔船翻覆搜救现场视频公布](https://so.toutiao.com/search?keyword=大陆渔船翻覆搜救现场视频公布)
-1. [黑色外卖勺不能用？博主买1100把检测](https://so.toutiao.com/search?keyword=黑色外卖勺不能用？博主买1100把检测)
 1. [赖岳谦：萧美琴低调窜美需高度关注](https://so.toutiao.com/search?keyword=赖岳谦：萧美琴低调窜美需高度关注)
 1. [脑出血处理不及时或致认知功能障碍](https://so.toutiao.com/search?keyword=脑出血处理不及时或致认知功能障碍)
 1. [律师解读杀害同学3男孩是否负刑责](https://so.toutiao.com/search?keyword=律师解读杀害同学3男孩是否负刑责)
@@ -74,7 +91,6 @@
 1. [专家解读初中男孩遭3名同学杀害](https://so.toutiao.com/search?keyword=专家解读初中男孩遭3名同学杀害)
 1. [男子开车带妻子体检遇爆炸不幸身亡](https://so.toutiao.com/search?keyword=男子开车带妻子体检遇爆炸不幸身亡)
 1. [张雪峰谈大学越来越像工厂说法](https://so.toutiao.com/search?keyword=张雪峰谈大学越来越像工厂说法)
-1. [济南6天开了4家甘肃麻辣烫](https://so.toutiao.com/search?keyword=济南6天开了4家甘肃麻辣烫)
 1. [新车顶配价格高于问界M5？小米回应](https://so.toutiao.com/search?keyword=新车顶配价格高于问界M5？小米回应)
 1. [A股三大指数集体收跌](https://so.toutiao.com/search?keyword=A股三大指数集体收跌)
 1. [管碧玲道歉 岛内舆论不买账](https://so.toutiao.com/search?keyword=管碧玲道歉+岛内舆论不买账)
@@ -132,7 +148,6 @@
 1. [女孩唱戏头勒13层水纱头饰疼到掉泪](https://so.toutiao.com/search?keyword=女孩唱戏头勒13层水纱头饰疼到掉泪)
 1. [用消费品以旧换新撬动万亿市场](https://so.toutiao.com/search?keyword=用消费品以旧换新撬动万亿市场)
 1. [韩国成人博览会遭抗议](https://so.toutiao.com/search?keyword=韩国成人博览会遭抗议)
-1. [宠物医院高压氧舱爆炸受伤女子去世](https://so.toutiao.com/search?keyword=宠物医院高压氧舱爆炸受伤女子去世)
 1. [黑山发生5.2级地震](https://so.toutiao.com/search?keyword=黑山发生5.2级地震)
 1. [2023年华为销售收入超7000亿元](https://so.toutiao.com/search?keyword=2023年华为销售收入超7000亿元)
 1. [詹姆斯：除脚踝还有其他地方不舒服](https://so.toutiao.com/search?keyword=詹姆斯：除脚踝还有其他地方不舒服)
@@ -224,7 +239,6 @@
 1. [有车主囤零部件应对售后“烂尾”](https://so.toutiao.com/search?keyword=有车主囤零部件应对售后“烂尾”)
 1. [《小日子》茉莉告诉父母自己离婚了](https://so.toutiao.com/search?keyword=《小日子》茉莉告诉父母自己离婚了)
 1. [欧冠八强出炉 意甲全军覆没](https://so.toutiao.com/search?keyword=欧冠八强出炉+意甲全军覆没)
-1. [“通胀潮”来了？3样东西或上涨](https://so.toutiao.com/search?keyword=“通胀潮”来了？3样东西或上涨)
 1. [燕郊爆炸事故首笔保险理赔已完成](https://so.toutiao.com/search?keyword=燕郊爆炸事故首笔保险理赔已完成)
 1. [娃哈哈销量暴涨 饮料市场会变天吗](https://so.toutiao.com/search?keyword=娃哈哈销量暴涨+饮料市场会变天吗)
 1. [两会后第一只“老虎”落马](https://so.toutiao.com/search?keyword=两会后第一只“老虎”落马)
